--- a/OOAD_Project/CODEnator/templates/CODEnator/index.html
+++ b/OOAD_Project/CODEnator/templates/CODEnator/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    >
+    <link rel="stylesheet" href="style.css" >
     <title>Document</title>
-</head>
-<body>
-    <h1>Image Upload</h1>
-    <form action="" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Submit</button>
-    </form>
+  </head>
+  <body>
+    <div>
+      <h1>&#60;Image Upload&#62;</h1>
+      <form
+        action=""
+        method="post"
+        enctype="multipart/form-data"
+        onsubmit="return myFunc()"
+      >
+        {% csrf_token %} {{form}}
+      
+        <br>
+        <button type="submit" class="btn btn-outline-secondary">Proceed to extract</button>
+      </form>
 
-    <button type="submit">
-        <a href="http://127.0.0.1:8000/extract">Proceed to extract</a>
-    </button>
-    
-</body>
+    <script>
+    function myFunc() {
+     location.assign("https://www.w3schools.com");
+      return false;}
+</script>
+  </body>
 </html>
