--- a/OOAD_Project/CODEnator/templates/CODEnator/userimage.html
+++ b/OOAD_Project/CODEnator/templates/CODEnator/userimage.html
@@ -1,17 +1,76 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    >
+    <!-- <link rel="stylesheet" href="style.css" > -->
+    <style>        
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
+          Liberation Mono, monospace;
+      }
+      body {
+        background-image: linear-gradient(
+            to top,
+            rgba(88, 17, 110, 0.7),
+            rgba(0, 0, 0, 0.7)
+          ),
+          url('{% static 'pic1.jpg' %}'); 
+          background-size: cover; 
+      }
+      div {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 1300px;
+        height: 550px;
+      }
+
+      h1 {
+        color: aliceblue;
+        font-weight: bold;
+        text-align: center;
+          font-size: 70px;
+      
+      }
+      button{
+          display: block;
+      }
+      a{
+      
+      }
+
+      #id_user_image
+      {
+        background-color: #9096c3;
+      }
+ </style>
     <title>Document</title>
-</head>
-<body>
-    <h1>Image Upload</h1>
-    <form action="" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Submit</button>
-    </form>
-</body>
+  </head>
+    <body >
+      <div>
+        <h1>&#60;Upload Image&#62;</h1>
+        <form
+          action=""
+          method="post"
+          enctype="multipart/form-data"
+          onsubmit="return myFunc()"
+        >
+          {% csrf_token %} {{form}}
+        
+          <button type="submit" class="btn btn-outline-secondary">Submit</button>
+        </form>
+    </body>
 </html>
